--- a/app/src/main/res/layout-w900dp/item_list.xml
+++ b/app/src/main/res/layout-w900dp/item_list.xml
@@ -18,8 +18,7 @@
     
     -->
 
-    <androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/item_list"
         android:name="com.example.selfcheckout_wof.ItemListFragment"
         android:layout_width="@dimen/item_width"
@@ -32,6 +31,12 @@
 
     <FrameLayout
         android:id="@+id/item_detail_container"
+        android:layout_width="565dp"
+        android:layout_height="match_parent"
+        android:layout_weight="3" />
+
+    <FrameLayout
+        android:id="@+id/users_choice_container"
         android:layout_width="0dp"
         android:layout_height="match_parent"
         android:layout_weight="3" />
