--- a/app/src/main/res/layout/fragment_users_choice.xml
+++ b/app/src/main/res/layout/fragment_users_choice.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+android:id="@+id/scrollView"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:fillViewport="true">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/vInvoiceItemLinesHolder"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".custom_components.UsersChoiceFragment">
-
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:id="@+id/txtParam3"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
-
-</FrameLayout>
+    android:orientation="vertical"
+    tools:context=".UsersChoiceFragment"></LinearLayout>
+</ScrollView>
