Sorted all database issues. Mainly there was a problem that database queries have to be run in a separate thread. Also the admin fragments weren't quite right.

--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -26,7 +26,7 @@ tools:context=".AdminActivity">
         android:text="@string/btnAddMainCategory" />
 
     <fragment
-        android:id="@+id/fEditSalesItem"
+        android:id="@+id/adm_sales_items_list_container"
         android:name="com.example.selfcheckout_wof.custom_components.AdmSalesItemsListFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
