Looks like admin section is about done

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
     <color name="selected_goods">#F70783</color>
+    <color name="admin_items_header">#F5F598</color>
 </resources>
