Added a full screen activity for Sales screen

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="selected_goods">#F70783</color>
     <color name="admin_items_header">#F5F598</color>
+
+    <color name="black_overlay">#66000000</color>
 </resources>
