--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -89,23 +89,29 @@ tools:context=".AdminActivity">
                 android:importantForAutofill="no"
                 android:inputType="number" />
 
-            <EditText
-                android:id="@+id/txtPage"
-                android:layout_width="200dp"
+            <LinearLayout
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/enter_item_page"
-                android:importantForAutofill="no"
-                android:inputType="number" />
+                android:orientation="horizontal">
+                <EditText
+                    android:id="@+id/txtPage"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/enter_item_page"
+                    android:importantForAutofill="no"
+                    android:inputType="number" />
 
-            <EditText
-                android:id="@+id/txtMultiChoiceNumber"
-                android:layout_width="200dp"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:hint="@string/enter_item_multi_choice_number"
-                android:importantForAutofill="no"
-                android:inputType="number" />
+                <EditText
+                    android:id="@+id/txtMultiChoiceNumber"
+                    android:layout_width="200dp"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:hint="@string/enter_item_multi_choice_number"
+                    android:importantForAutofill="no"
+                    android:inputType="number" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
