--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -25,12 +25,13 @@
             tools:ignore="UselessParent">
 
             <Button
-                android:id="@+id/dummy_button"
+                android:id="@+id/btnGoToAdmin"
                 style="?metaButtonBarButtonStyle"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="@string/dummy_button" />
+                android:onClick="onGoToAdminClick"
+                android:text="@string/btnGoToAdmin" />
 
         </LinearLayout>
     </FrameLayout>
@@ -51,7 +52,7 @@
     <LinearLayout
         android:id="@+id/vContentLayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="666dp"
         android:orientation="vertical"></LinearLayout>
 
 </FrameLayout>
