--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -143,6 +143,13 @@ tools:context=".AdminActivity">
                 android:visibility="visible" />
         </LinearLayout>
 
+        <!--fragment
+            android:id="@+id/adm_sales_items_list_hdr_container"
+            android:name="com.example.selfcheckout_wof.custom_components.AdmSalesItemsListFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_adm_sales_items_list" /-->
+
         <fragment
             android:id="@+id/adm_sales_items_list_container"
             android:name="com.example.selfcheckout_wof.custom_components.AdmSalesItemsListFragment"
