Looks like finally the problem with fragments has been solved. Turns out I needed one more (vertical) linear layout, because otherwise the fragments were displayed next to each other horizontally and the latter fragment being pushed out of sight

--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -143,27 +143,32 @@ tools:context=".AdminActivity">
                 android:visibility="visible" />
         </LinearLayout>
 
-        <!--fragment
-            android:id="@+id/adm_sales_items_list_hdr_container"
-            android:name="com.example.selfcheckout_wof.custom_components.AdmSalesItemsListFragment"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            tools:layout="@layout/fragment_adm_sales_items_list" />
+            android:orientation="vertical">
+            <!--fragment
+                android:id="@+id/adm_sales_items_list_hdr_container"
+                android:name="com.example.selfcheckout_wof.custom_components.AdmSalesItemsListFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:layout="@layout/fragment_adm_sales_items_list" />
 
-        <fragment
-            android:id="@+id/adm_sales_items_list_container"
-            android:name="com.example.selfcheckout_wof.custom_components.AdmSalesItemsListFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout="@layout/fragment_adm_sales_items_list" /-->
-        <FrameLayout android:id="@+id/adm_sales_items_list_hdr_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout="@layout/fragment_adm_sales_items_hdr" />
-        <FrameLayout android:id="@+id/adm_sales_items_list_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            tools:layout="@layout/fragment_adm_sales_items_list" />
+            <fragment
+                android:id="@+id/adm_sales_items_list_container"
+                android:name="com.example.selfcheckout_wof.custom_components.AdmSalesItemsListFragment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:layout="@layout/fragment_adm_sales_items_list" /-->
+            <FrameLayout android:id="@+id/adm_sales_items_list_hdr_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:layout="@layout/fragment_adm_sales_items_hdr" />
+            <FrameLayout android:id="@+id/adm_sales_items_list_container"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:layout="@layout/fragment_adm_sales_items_list" />
+        </LinearLayout>
     </LinearLayout>
 
 </LinearLayout>
