--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -49,10 +49,19 @@
         android:textSize="50sp"
         android:textStyle="bold" /-->
 
-    <LinearLayout
-        android:id="@+id/vContentLayout"
-        android:layout_width="match_parent"
-        android:layout_height="666dp"
-        android:orientation="vertical"></LinearLayout>
+    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/admSalesItemsListScrollView"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:fadeScrollbars="false"
+        android:fillViewport="true">
+        <LinearLayout
+            android:id="@+id/vContentLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:gravity="center"></LinearLayout>
+    </ScrollView>
 
 </FrameLayout>
