--- a/app/src/main/res/layout/activity_sales.xml
+++ b/app/src/main/res/layout/activity_sales.xml
@@ -36,32 +36,20 @@
         </LinearLayout>
     </FrameLayout>
 
-    <!-- This FrameLayout insets its children based on system windows using
-         android:fitsSystemWindows. -->
-    <!--TextView
-        android:id="@+id/fullscreen_content"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:gravity="center"
-        android:keepScreenOn="true"
-        android:text="@string/dummy_content"
-        android:textColor="#33b5e5"
-        android:textSize="50sp"
-        android:textStyle="bold" /-->
+        android:orientation="vertical">
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-        android:id="@+id/admSalesItemsListScrollView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
-        android:fadeScrollbars="false"
-        android:fillViewport="true">
-        <LinearLayout
-            android:id="@+id/vContentLayout"
+        <FrameLayout android:id="@+id/frmSalesItemsListNavigation"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center"></LinearLayout>
-    </ScrollView>
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_sales_process_navigation" />
+        <FrameLayout android:id="@+id/frmSalesItemsListBrowse"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_sales_process_browse" />
+    </LinearLayout>
+
 
 </FrameLayout>
