--- a/app/src/main/res/layout/fragment_sales_process_navigation.xml
+++ b/app/src/main/res/layout/fragment_sales_process_navigation.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".custom_components.SalesProcessNavigationFragment">
 
+</FrameLayout-->
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/v1"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
     <LinearLayout
         android:id="@+id/salesItemsNavigationView"
         android:layout_width="match_parent"
@@ -26,5 +33,4 @@
             android:layout_height="wrap_content"
             android:text="@string/btnNextPage"></Button>
     </LinearLayout>
-
-</FrameLayout>
+</LinearLayout>
