Added the Add to Order button and improved the look of the meal selection

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,5 @@
     <color name="admin_items_header">#F5F598</color>
 
     <color name="black_overlay">#66000000</color>
+    <color name="redText">#E73232</color>
 </resources>
