--- a/app/src/main/res/layout/fragment_sales_process_see_meal.xml
+++ b/app/src/main/res/layout/fragment_sales_process_see_meal.xml
@@ -1,23 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".custom_components.SalesProcessNavigationFragment">
+    tools:context=".custom_components.SalesProcessNavigationFragment"
+    android:orientation="vertical">
 
-    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    <ScrollView
         android:id="@+id/salesItemsListScrollView"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
-        android:scrollbarAlwaysDrawVerticalTrack="true"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:fadeScrollbars="false"
-        android:fillViewport="true">
+        android:fillViewport="true"
+        android:scrollbarAlwaysDrawVerticalTrack="true">
+
         <LinearLayout
             android:id="@+id/vContentLayout"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:gravity="center"></LinearLayout>
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:orientation="vertical"></LinearLayout>
     </ScrollView>
-
-</FrameLayout>
+    <Button
+        android:id="@+id/btnAddToOrder"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/btnAddToOrder"></Button>
+</LinearLayout>
