--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -31,4 +31,8 @@
         <item name="android:background">@color/black_overlay</item>
     </style>
 
+    <style name="mealTotal" parent="android:Widget.TextView">
+        <item name="android:textColor">@color/redText</item>
+        <item name="android:textStyle">bold</item>
+    </style>
 </resources>
