--- a/app/src/main/res/layout/fragment_sales_process_see_meal.xml
+++ b/app/src/main/res/layout/fragment_sales_process_see_meal.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".custom_components.SalesProcessNavigationFragment"
     android:orientation="vertical">
 
@@ -15,17 +15,27 @@
         android:scrollbarAlwaysDrawVerticalTrack="true">
 
         <LinearLayout
-            android:id="@+id/vContentLayout"
+            android:id="@+id/scrollLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="fill_vertical"
             android:orientation="vertical"
             android:paddingLeft="5dp"
-            android:paddingRight="5dp"></LinearLayout>
+            android:paddingRight="5dp">
+            <LinearLayout
+                android:id="@+id/vContentLayout"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="fill_vertical"
+                android:orientation="vertical"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp">
+            </LinearLayout>
+            <Button
+                android:id="@+id/btnGoToCheckout"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/btnGoToCheckout"></Button>
+        </LinearLayout>
     </ScrollView>
-    <Button
-        android:id="@+id/btnGoToCheckout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/btnGoToCheckout"></Button>
 </LinearLayout>
