Receipt can now be printed - aligned items and prices. No address and no logo yet.

--- a/app/src/main/res/layout/fragment_sales_process_checkout.xml
+++ b/app/src/main/res/layout/fragment_sales_process_checkout.xml
@@ -30,6 +30,7 @@ android:orientation="vertical">
             android:id="@+id/btnPrintReceipt"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:onClick="onPrintReceipt"
             android:text="@string/checkout_print_receipt" />
     </LinearLayout>
 </ScrollView>
