Fixing compilation problems and starting to re-arrange PPH GUI for my needs.

--- a/app/src/main/res/layout/pph_login_activity.xml
+++ b/app/src/main/res/layout/pph_login_activity.xml
@@ -87,6 +87,12 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
+                <Button
+                    android:id="@+id/btnConnectToPaypal"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/btnConnectToPaypal" />
+
                 <com.example.selfcheckout_wof.PPH.ui.StepView
                     android:id="@+id/step1"
                     android:layout_width="match_parent"
